--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
         run: npm install --global surge
       
       - name: Deploy to Surge
-        run: surge ./build omarreactapp2.surge.sh -token ${{secrets.SURGE_TOKEN}}
+        run: surge ./build omarreactapp2.surge.sh --token ${{secrets.SURGE_TOKEN}}
